# Haskell-SQL

./: CHANGELOG.md  README.md  plc-language.cabal
app/: DSLGrammar.y  DSLInterpreter.hs  DSLTokens.x  Files.hs  Main.hs  Tablefy.hs
examples/pr1/: README.md
examples/pr1/Example 2/: pr1.cql
examples/pr1/Example 3/: B.csv
examples/pr2/: README.md
examples/pr2/Example 1/: A.csv
examples/pr2/Example 3/: pr2.cql
examples/pr3/: README.md
examples/pr3/Example 1/: pr3.cql
examples/pr3/Example 2/: P.csv  Q.csv
examples/pr4/: README.md
examples/pr4/Example 1/: pr4.cql
examples/pr4/Example 2/: A.csv
examples/pr5/: README.md
examples/pr5/Example 1/: pr5.cql
