cabal-version:      2.2
name:               plc-language
version:            1.0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Konrad K Sobczak <kks1g19@soton.ac.uk>, Filip Kubacki <fk1g19@soton.ac.uk>, Michael Ryan <mpr1g18@soton.ac.uk>
maintainer:         kks1g19@soton.ac.uk, fk1g19@soton.ac.uk, mpr1g18@soton.ac.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable csvql
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, split, array, regex-tdfa
    hs-source-dirs:   app
    default-language: Haskell2010
    build-tools: alex, happy
    other-modules: DSLTokens, DSLGrammar, DSLInterpreter, Files, Tablefy
    autogen-modules: DSLTokens, DSLGrammar

repository hackage.haskell.org
  url: http://hackage.haskell.org/packages/archive
